recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:5: error: not found: value step
    droite(angle) ; current(step-1) ; tree(steps-1, length*shrink, angle, shrink) ;
                            ^Tree:7: error: not found: value step
    gauche(2*angle) ; current(step-1) ; tree(steps-1, length*shrink, angle, shrink) ;
                              ^Tree:10: error: not found: value step
    current(step) ;
            ^